--- a/styles/index.css
+++ b/styles/index.css
@@ -1,1 +1,165 @@
+:root {
+  --color-text: #000;
+}
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Inconsolata", monospace;
+}
+
+body {
+  background: linear-gradient(to bottom, #016cc3, #191e29);
+  background-attachment: fixed;
+  color: #fff;
+}
+
+.header {
+  background-color: rgba(1, 108, 195, 0.424);
+  width: 100%;
+  height: 3rem;
+  position: fixed;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
+  align-items: center;
+}
+
+.header__home-container {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header__home {
+  color: #fff;
+}
+
+.header__nav-container {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header__nav {
+  width: 100%;
+}
+
+.header__nav-list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.header__nav-list-item {
+  padding: 1rem;
+  list-style: none;
+  text-align: center;
+}
+
+.header__nav-list-link {
+  color: #fff;
+  text-decoration: none;
+  padding: 0.7rem;
+}
+
+.header__nav-list-link:hover {
+  text-decoration: underline;
+}
+
+.header__nav-list-link img {
+  width: 20px;
+  height: 20px;
+}
+
+/* Greeting */
+.hero {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero__greeting-container {
+  text-align: center;
+  line-height: 1.2;
+}
+
+.hero__greeting-title {
+  font-size: 80px;
+  font-weight: 600;
+}
+
+.hero__greeting-subtitle {
+  font-size: 30px;
+  font-weight: 400;
+}
+
+.hero__greeting-icon-container {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero__greeting-icon {
+  margin: 0.5rem 0.5rem 0 0.5rem;
+  color: transparent;
+}
+
+.hero__greeting-icon img {
+  width: 30px;
+}
+
+.hero__start-button-container {
+  width: 20%;
+  text-align: center;
+  position: relative;
+  top: 100px;
+}
+
+.hero__start-button {
+  width: 100%;
+  padding: 1rem;
+  border: 1px solid #fff;
+  border-radius: 0.5rem;
+  font-size: 20px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.hero__start-button:hover {
+  background-color: #191e29;
+  border: 1px solid #191e29;
+}
+
+/* About Me */
+.about-me {
+  /* color: var(--color-text); */
+  text-align: justify;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
+  align-items: center;
+}
+
+.about-me__introduction-container {
+  outline: 1px solid #000;
+}
+
+.about-me__introduction-title {
+  text-align: center;
+  font-size: 1.7rem;
+}
+
+.about-me__image-container {
+  text-align: center;
+}
+
+.about-me__image {
+  width: 200px;
+}
