--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,5 @@
 :root {
-  --color-text: #000;
+  --color-text: #fff;
 }
 
 * {
@@ -10,7 +10,9 @@
 }
 
 body {
-  color: #fff;
+  background: linear-gradient(to bottom, #016cc3, #191e29);
+  background-attachment: fixed;
+  color: var(--color-text);
 }
 
 .header {
@@ -74,8 +76,6 @@ body {
 
 /* Greeting */
 .hero {
-  background: linear-gradient(to bottom, #016cc3, #191e29);
-  background-attachment: fixed;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -138,9 +138,8 @@ body {
 
 /* About Me */
 .about-me {
-  color: var(--color-text);
   text-align: justify;
-  height: 50vh;
+  height: 100vh;
   margin: 0 2rem 0 2rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -170,13 +169,12 @@ body {
 
 .about-me__image {
   width: 250px;
-  border: 1px solid #000;
+  border: 1px solid #fff;
   border-radius: 50%;
 }
 
 /* Projects */
 .projects {
-  color: var(--color-text);
   height: 100vh;
   display: grid;
   grid-template-rows: repeat(2, 1fr);
@@ -197,6 +195,7 @@ body {
 
 .projects__card-project-container {
   width: 90vw;
+  margin-bottom: 2rem;
   display: grid;
   gap: 1.5rem;
   grid-template: repeat(2, 1fr) / repeat(3, 1fr);
@@ -207,18 +206,20 @@ body {
 .projects__card-project {
   width: 19rem;
   height: 19rem;
+  background-color: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(5px);
   border-radius: 1rem;
   box-shadow: 0 0 1rem #191e29;
   display: flex;
-  gap: 0.5rem;
+  gap: 0.7rem;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .projects__card-project-image {
-  width: 200px;
-  border: 1px solid #000;
+  width: 250px;
+  border: 1px solid #fff;
 }
 
 .projects__card-project-title {
@@ -230,14 +231,43 @@ body {
 }
 
 .projects__card-project-button {
-  color: #000;
+  color: #fff;
   text-decoration: none;
-  border: 1px solid #191e29;
-  border-radius: 1rem;
+  border: 1px solid #fff;
+  border-radius: 0.5rem;
   padding: 1rem;
 }
 
 .projects__card-project-button:hover {
   background-color: #191e29;
+  border: 1px solid #191e29;
   color: #fff;
+}
+
+/* Skills */
+.skills {
+  height: 50vh;
+  display: flex;
+  gap: 3rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.skills__title {
+  font-size: 1.7rem;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.skills__skills-container {
+  width: 70%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.skills__skill-image {
+  width: 100px;
 }
