--- a/styles/index.css
+++ b/styles/index.css
@@ -15,6 +15,10 @@ body {
   color: var(--color-text);
 }
 
+h3 {
+  letter-spacing: 0.4rem;
+}
+
 .header {
   background-color: rgba(1, 108, 195, 0.424);
   width: 100%;
@@ -24,6 +28,7 @@ body {
   grid-template-columns: repeat(2, 1fr);
   justify-content: center;
   align-items: center;
+  z-index: 10;
 }
 
 .header__home-container {
@@ -270,4 +275,83 @@ body {
 
 .skills__skill-image {
   width: 100px;
+}
+
+/* Contact Me */
+.contact-me {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-me__title-container {
+  margin: 2rem;
+  padding: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-me__title {
+  font-size: 1.7rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+#name {
+  grid-area: name;
+}
+
+#last-name {
+  grid-area: last-name;
+}
+
+#email {
+  grid-area: email;
+}
+
+#subject {
+  grid-area: subject;
+}
+
+#message {
+  grid-area: message;
+}
+
+.contact-me__form-container {
+  width: 50%;
+}
+
+.contact-me__form {
+  height: 100%;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-template-areas:
+    "name last-name"
+    "email email"
+    "subject subject"
+    "message message"
+    "message message";
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-me__form-input {
+  height: 2.5rem;
+  border-radius: 0.5rem;
+}
+
+.contact-me__form-textarea {
+  border-radius: 0.5rem;
+}
+
+.contact-me__form-input::placeholder,
+.contact-me__form-textarea::placeholder {
+  text-align: center;
 }
